--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,12 +3,20 @@ aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==23.1.0
+cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 dataclasses-json==0.5.7
 fastapi==0.95.2
 frozenlist==1.3.3
+google-api-core==2.11.1
+google-auth==2.21.0
+google-cloud-core==2.3.2
+google-cloud-storage==2.10.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.1
 greenlet==2.0.2
 gunicorn==20.1.0
 h11==0.14.0
@@ -24,12 +32,16 @@ openai==0.27.7
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.2
+protobuf==4.23.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pydantic==1.10.8
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
 requests==2.31.0
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.15
@@ -39,7 +51,7 @@ tqdm==4.65.0
 typing-inspect==0.9.0
 typing_extensions==4.6.2
 tzdata==2023.3
-urllib3==2.0.2
+urllib3==1.26.16
 uvicorn==0.22.0
 websockets==11.0.3
 yarl==1.9.2
